Refactored P2P & discovery, fixed and re-enabled UDP P2P connections, Improvements to file search.